# StudScanAgent

./: .gitignore  ARCHITECTURE.md  README.md  RECRUITER_BRIEF.md  TECHNICAL_DECISIONS.md  main.py  models.py  pyproject.toml
.github/: copilot-instructions.md
prompts/: brickecon_prompt.txt  bricklink_prompt.txt  lego_site_prompt.txt  system_prompt.txt
